<resources>
    <string name="app_name">Higher-Lower</string>
    <string name="diceDescription">A dice displaying: </string>
    <string name="last_throw">Last Throw:</string>
    <string name="lower">Lower</string>
    <string name="equals">Equals</string>
    <string name="higher">Higher</string>
    <string name="reset">Reset</string>
    <string name="highscore">HighScore:</string>
    <string name="score">Score:</string>
</resources>
